--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "telegram-webhook",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "dev": "vercel dev",
+    "setup-webhook": "node setup-webhook.js"
+  },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "firebase-admin": "^11.11.0"
   }
 }
